JHD: TESTED CombatZoneCard2